--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -16,10 +16,10 @@ jobs:
     
     ## jdk setting
     - uses: actions/checkout@v3
-    - name: Set up JDK 11
+    - name: Set up JDK 17
       uses: actions/setup-java@v3
       with:
-        java-version: '11'
+        java-version: '17'
         distribution: 'temurin'
         
     ## gradle caching - 빌드 시간 향상
@@ -39,7 +39,7 @@ jobs:
           mkdir -p ./src/main/resources
           cd ./src/main/resources
           touch ./application.yml
-          echo '${{ secrets.PROPERTIES_PROD }}' > ./application.yml
+          echo '${{ secrets.APPLICATION_YAML }}' > ./application.yml
       shell: bash
 
     ## grant execute permission for gradlew
